[package]
name = "beat-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.10.1"
actix-web = "4"
bytes = "1.5.0"
tokio = "1.35.1"
actix-service = "2.0.2"
anyhow = "1.0.77"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
